--- a/src/scss/modules/_button.scss
+++ b/src/scss/modules/_button.scss
@@ -1,5 +1,7 @@
 .btn-yellow{
     background-color: $gold_yellow;
+    padding: .675rem 1.75rem;
+    border-radius: 59px;
     color: $azure;
     font-weight: 500;
     font-size: $base_font_size;
@@ -7,6 +9,8 @@
 
 .btn-green{
     background-color: $light_green;
+    padding: .675rem 1.75rem;
+    border-radius: 59px;
     color: $azure;
     font-weight: 500;
     font-size: $base_font_size;
