--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -11,6 +11,7 @@ $viking: #54B9BE;
 $oyster_bay: #D8E8EB;
 $gold_yellow: #d9da24;
 $navy_dark: #082747;
-$text-color: #d2dce7;
+$text-color: #a0b0c2;
 
 $showcase-image:'../images/showcase.png';
+$world-map: '../images/world-map.png';
