--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,4 +1,22 @@
 .footer-section{
     background-color: $navy_dark;
-    padding: 30px 0;
+    padding: 40px 0;
+}
+
+.footer-title{
+    color: $viking;
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.footer-nav{
+    list-style: none;
+
+    li{
+        color: $text-color;
+        font-size: 13px;
+        padding-bottom: 6px;
+    }
 }
